src/objects/Financial_Application__c.object
<CustomObject>
    <fields>
        <fullName>Total_Other_Credits_Ratio__c</fullName>
        <formula>Total_Other_Credits_Amount__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Other Credits Amount / Purchase Price</inlineHelpText>
        <label>Total Other Credits Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Other_Financing_Ratio__c</fullName>
        <formula>Total_Other_Financing__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Other Financing  / Purchase Price</inlineHelpText>
        <label>Total Other Financing Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Other_Financing__c</fullName>
        <formula>Other_Financing_Amount_1__c + Other_Financing_Amount_2__c + Other_Financing_Amount_3__c + Other_Financing_Amount_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Other Financing Amount 1 + Other Financing Amount 2 + Other Financing Amount 3 + Other Financing Amount 4</inlineHelpText>
        <label>Total Other Financing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_HH_Liq_Assets_w_o_Retirement__c</fullName>
        <label>Total of HH Liq. Assets w/o Retirement</label>
        <summarizedField>Financial_Application_Member__c.Member_s_Liquid_Assets_w_o_Retirement__c</summarizedField>
        <summaryForeignKey>Financial_Application_Member__c.Financial_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trustee_Name__c</fullName>
        <label>Trustee Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Account_Number__c</fullName>
        <label>Withdrawn-From Acct Inst. Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Account_Type__c</fullName>
        <label>Withdrawn-From Acct Inst. Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Stocks</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Profit-Sharing Plan</fullName>
                </value>
                <value>
                    <fullName>Defined Benefit Plan</fullName>
                </value>
                <value>
                    <fullName>Money Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>ESOP</fullName>
                </value>
                <value>
                    <fullName>Governmental Plan</fullName>
                </value>
                <value>
                    <fullName>409A Nonqualified Deferred Comp</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Inheritance</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Address__c</fullName>
        <label>Withdrawn-From Acct Inst. Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Name__c</fullName>
        <label>Withdrawn-From Acct Inst. Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Phone__c</fullName>
        <label>Withdrawn-From Acct Inst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_Monthly_Mortgage_Payment__c</fullName>
        <label>1st Mortgage Monthly Mortgage Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Bathrooms__c</fullName>
        <label># of Bathrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Bedrooms__c</fullName>
        <label># of Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Household_Account__c</columns>
        <columns>Loan_Officer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Applications</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Applications</label>
    </listViews>
    <nameField>
        <displayFormat>FA-{YYYY}{MM}-{0}</displayFormat>
        <label>Financial Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Applications</pluralLabel>
    <recordTypes>
        <fullName>BMR_DALP</fullName>
        <active>true</active>
        <description>Downpayment Assistance - BMR Downpayment Assistance Loan Program (BMR-DALP)</description>
        <label>BMR-DALP</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMR_DALP_Plus</fullName>
        <active>true</active>
        <description>Downpayment Assistance - BMR Downpayment Assistance Loan Program Plus (BMR-DALP Plus)</description>
        <label>BMR-DALP Plus</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMR_Only</fullName>
        <active>true</active>
        <description>BMR Only Application</description>
        <label>BMR Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSLP</fullName>
        <active>true</active>
        <description>Downpayment Assistance - City Second Loan Program (CSLP)</description>
        <label>CSLP</label>
    </recordTypes>
    <recordTypes>
        <fullName>DALP</fullName>
        <active>true</active>
        <description>Downpayment Assistance - General Downpayment Assistance Loan Program (DALP)</description>
        <label>DALP</label>
    </recordTypes>
    <recordTypes>
        <fullName>FRDALP</fullName>
        <active>true</active>
        <description>Downpayment Assistance - First Responders Downpayment Assistance Loan Program (FRDALP)</description>
        <label>FRDALP</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCC_Only</fullName>
        <active>true</active>
        <description>Mortgage Credit Certificate (MCC) Only</description>
        <label>MCC Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIC</fullName>
        <active>true</active>
        <description>Downpayment Assistance - Police in the Community Loan Program (PIC)</description>
        <label>PIC</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMCC</fullName>
        <active>false</active>
        <description>Tax Credit - Reissued Mortgage Credit Certificate Program (RMCC)</description>
        <label>RMCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>TND</fullName>
        <active>true</active>
        <description>Downpayment Assistance - Teacher Next Door Loan Program (TND)</description>
        <label>TND</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AMI_Year_Must_Be_Current_or_Past_Year</fullName>
        <active>true</active>
        <description>Validates that AMI Year entered is the current year or a past year (cannot be a year in the future)</description>
        <errorConditionFormula>IF ( 
(
VALUE ( (TEXT(AMI_Year__c)) ) &gt; YEAR(TODAY()) ||
VALUE ( BMR_DALP_Median_Income_Table_Year__c ) &gt; YEAR(TODAY()) ||
VALUE ( BMR_DALP_Plus_Median_Income_Table_Year__c ) &gt; YEAR(TODAY()) ||
VALUE ( CSLP_Median_Income_Table_Year__c ) &gt; YEAR(TODAY()) ||
VALUE ( DALP_Median_Income_Table_Year__c ) &gt; YEAR(TODAY()) ||
VALUE ( FRDALP_Median_Income_Table_Year__c ) &gt; YEAR(TODAY()) ||
VALUE ( TND_Median_Income_Table_Year__c ) &gt; YEAR(TODAY())
), true, false)</errorConditionFormula>
        <errorDisplayField>AMI_Year__c</errorDisplayField>
        <errorMessage>AMI Year for each program must be a current or past year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Move_In_Before_60_Days_Hard_Stop</fullName>
        <active>true</active>
        <description>If any Borrower(s) cannot move in before 60 days post closing, then they are not eligible for this program or these programs.</description>
        <errorConditionFormula>ISPICKVAL(Borrowers_move_in_60_days_post_closing__c, &apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>Borrowers_move_in_60_days_post_closing__c</errorDisplayField>
        <errorMessage>Borrower(s) must be able to move in within 60 days of closing to be eligible</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HH_Member_Has_Owned_Last_3_Years</fullName>
        <active>true</active>
        <description>Hard stop if checkbox for Has any Member Owned a Unit in the Last 3 Years is checked</description>
        <errorConditionFormula>ISPICKVAL(Has_any_member_owned_a_unit_last_3_yrs__c, &apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>Has_any_member_owned_a_unit_last_3_yrs__c</errorDisplayField>
        <errorMessage>This household is not eligible for any MOHCD down payment assistance program since at least one member has owned a unit within the last 3 years.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TND_Disallow_More_Than_One_Cash_Loan</fullName>
        <active>true</active>
        <description>Error if user attempts to include more than one cash loan with a TND request (only one cash loan allowed for TND)</description>
        <errorConditionFormula>IF(( TND__c = TRUE || TND_Amount_Requested__c &gt; 0 )
&amp;&amp; (
(( DALP__c = TRUE || DALP_Amount_Requested__c &gt; 0 ) &amp;&amp; ( CSLP__c = TRUE || PIC__c = TRUE || BMR_DALP__c = TRUE || BMR_DALP_Plus__c = TRUE ))
||
(( CSLP__c = TRUE || CSLP_Amount_Requested__c &gt; 0 ) &amp;&amp; ( DALP__c = TRUE || PIC__c = TRUE || BMR_DALP__c = TRUE || BMR_DALP_Plus__c = TRUE ))
||
(( PIC__c = TRUE || PIC_Amount_Requested__c &gt; 0 ) &amp;&amp; ( CSLP__c = TRUE || DALP__c = TRUE || BMR_DALP__c = TRUE || BMR_DALP_Plus__c = TRUE || FRDALP__c = TRUE ))
||
(( BMR_DALP__c = TRUE || BMR_DALP_Amount_Requested__c &gt; 0 ) &amp;&amp; ( CSLP__c = TRUE || PIC__c = TRUE || DALP__c = TRUE || BMR_DALP_Plus__c = TRUE ))
||
(( BMR_DALP_Plus__c = TRUE || BMR_DALP_Plus_Amount_Requested__c &gt; 0 ) &amp;&amp; ( CSLP__c = TRUE || PIC__c = TRUE || BMR_DALP__c = TRUE || DALP__c = TRUE ))
), true, false)</errorConditionFormula>
        <errorMessage>When including TND, only one additional cash loan may be selected.</errorMessage>
    </validationRules>
</CustomObject>